<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.sam.application_final.ActivityFour">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!--<RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/topBar">

            <android.support.design.widget.AppBarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">



            </android.support.design.widget.AppBarLayout>

        </RelativeLayout>




        <RelativeLayout
            android:layout_below="@+id/topBar"
            android:layout_above="@+id/bottomBar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="80dp"
                android:textSize="30sp"
                android:id="@+id/activityTitle3"
                android:textAlignment="center"/>

        </RelativeLayout>-->
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">


        <LinearLayout
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:gravity="center_vertical"
            android:orientation="vertical">


            <TextView
                android:layout_width="wrap_content"
                android:text="@string/update_title"
                android:textSize="20sp"
                android:layout_marginBottom="40dp"
                android:layout_gravity="center_horizontal"
                android:layout_height="wrap_content" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_new_pseudo"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/newpseudo"
                    android:inputType="text"
                    android:singleLine="true"
                    android:imeOptions="actionNext"
                    android:hint="@string/newpseudo"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" />

            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_new_ville"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/newville"
                    android:inputType="text"
                    android:singleLine="true"
                    android:imeOptions="actionNext"
                    android:hint="@string/newville"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" />

            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_new_pays"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/newpays"
                    android:inputType="text"
                    android:singleLine="true"
                    android:imeOptions="actionNext"
                    android:hint="@string/newpays"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" />

            </android.support.design.widget.TextInputLayout>
            <TextView
                android:layout_width="wrap_content"
                android:text="@string/update_email"
                android:textSize="16sp"
                android:layout_height="wrap_content" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_new_email"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/email"
                    android:inputType="textEmailAddress"
                    android:singleLine="true"
                    android:imeOptions="actionNext"
                    android:hint="@string/newemail"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" />

            </android.support.design.widget.TextInputLayout>



            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_new_email_confirm"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/newemailconfirm"
                    android:inputType="textEmailAddress"
                    android:singleLine="true"
                    android:imeOptions="actionNext"
                    android:hint="@string/newemailconfirm"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" />

            </android.support.design.widget.TextInputLayout>
            <TextView
                android:layout_width="wrap_content"
                android:text="@string/update_password"
                android:textSize="16sp"
                android:layout_height="wrap_content" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_old_password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/oldpassword"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    android:imeOptions="actionNext"
                    android:hint="@string/oldpassword"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_new_password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/newpassword"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    android:imeOptions="actionDone"
                    android:hint="@string/newpassword"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" />

            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_new_password_confirm"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/newpasswordconfirm"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    android:imeOptions="actionDone"
                    android:hint="@string/newpasswordconfirm"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" />

            </android.support.design.widget.TextInputLayout>


            <Button
                android:id="@+id/btn_update"
                android:text="@string/update"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <ProgressBar
                android:id="@+id/pb_loader"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:visibility="invisible"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        </ScrollView>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/bottomBar"
            android:layout_alignParentBottom="true">

            <android.support.design.widget.BottomNavigationView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/bottomNavView_Bar_back"
                android:background="@drawable/white_grey_border_top"
                app:menu="@menu/bottom_navigation_menu_back">


            </android.support.design.widget.BottomNavigationView>
        </RelativeLayout>



    </RelativeLayout>














</android.support.design.widget.CoordinatorLayout>
