<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">



    <Button
        android:layout_marginTop="15dp"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnTEST"
        android:text="TESTBTN 1"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textSize="25sp"
        android:text="Tab1"
        android:layout_marginTop="40dp"
        android:id="@+id/textTab1"
        android:layout_below="@+id/btnTEST"/>
    <LinearLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:gravity="center_vertical"
        android:orientation="vertical">


        <TextView
            android:layout_width="wrap_content"
            android:text="@string/login_title"
            android:textSize="20sp"
            android:layout_marginBottom="40dp"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_identifiant_log"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/pseudo"
                android:inputType="text"
                android:singleLine="true"
                android:imeOptions="actionNext"
                android:hint="@string/pseudo_email"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_password_log"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/password"
                android:inputType="textPassword"
                android:singleLine="true"
                android:imeOptions="actionDone"
                android:hint="@string/password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />

        </android.support.design.widget.TextInputLayout>


        <Button
            android:id="@+id/btn_send"
            android:text="@string/login"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <ProgressBar
            android:id="@+id/pb_loader"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:visibility="invisible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>
</RelativeLayout>