<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.sam.application_final.Register">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!--<RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/topBar">

            <android.support.design.widget.AppBarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">



            </android.support.design.widget.AppBarLayout>

        </RelativeLayout>




        <RelativeLayout
            android:layout_below="@+id/topBar"
            android:layout_above="@+id/bottomBar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="80dp"
                android:textSize="30sp"
                android:id="@+id/activityTitle4"
                android:textAlignment="center"/>

        </RelativeLayout>-->



        <LinearLayout
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:gravity="center_vertical"
            android:orientation="vertical">


            <TextView
                android:layout_width="wrap_content"
                android:text="@string/register_title"
                android:textSize="20sp"
                android:layout_marginBottom="40dp"
                android:layout_gravity="center_horizontal"
                android:layout_height="wrap_content" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_pseudo"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/pseudo"
                    android:inputType="text"
                    android:singleLine="true"
                    android:imeOptions="actionNext"
                    android:hint="@string/pseudo"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" />

            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_email"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/email"
                    android:inputType="textEmailAddress"
                    android:singleLine="true"
                    android:imeOptions="actionNext"
                    android:hint="@string/email"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" />

            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/password"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    android:imeOptions="actionNext"
                    android:hint="@string/password"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" />

            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:id="@+id/til_password2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/password2"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    android:imeOptions="actionDone"
                    android:hint="@string/password2"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" />

            </android.support.design.widget.TextInputLayout>


            <Button
                android:id="@+id/btn_send"
                android:text="@string/register"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <ProgressBar
                android:id="@+id/pb_loader"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:visibility="invisible"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>


       <!-- <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/bottomBar"
            android:layout_alignParentBottom="true">

            <android.support.design.widget.BottomNavigationView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/bottomNavView_Bar"
                android:background="@drawable/white_grey_border_top"
                app:menu="@menu/bottom_navigation_menu">


            </android.support.design.widget.BottomNavigationView>
        </RelativeLayout>-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/bottomBar"
            android:layout_alignParentBottom="true">

            <android.support.design.widget.BottomNavigationView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/bottomNavView_Bar_first"
                android:background="@drawable/white_grey_border_top"
                app:menu="@menu/bottom_navigation_menu_first">


            </android.support.design.widget.BottomNavigationView>
        </RelativeLayout>


    </RelativeLayout>














</android.support.design.widget.CoordinatorLayout>
